# lottery

./: README.rst  main.py  pyproject.toml
awesome_lottery/: file.py  lottery.py  main.py  result_writter.py
data/: participants1.json
test_resources/: participant.json
tests/: conftest.py  test_awesome_lottery.py  test_file.py  test_lottery.py  test_main.py  test_result_writter.py
tests/test_resources/: participant.csv
