[tool.poetry]
name = "awesome_lottery"
version = "0.1.0"
description = ""
authors = ["Sebastian Przesmycki <sprzesmycki@pgs-soft.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
dataclasses-json = "^0.5.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
